<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SongActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back"
            android:contentDescription="@string/back_button" />
        <TextView
            android:layout_marginStart="5dp"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visualize_song"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/songImage"
            android:layout_width="200dp"
            android:layout_height="200dp"/>
        <TextView
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:text="Song Title"
            android:gravity="center"
            android:textColor="#000"
            android:textSize="26sp"/>
        <TextView
            android:id="@+id/songArtistField"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:text="Song Artist"
            android:gravity="center"
            android:textColor="#000"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/songAlbumField"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:text="Song Album"
            android:gravity="center"
            android:textColor="#000"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/songDurationField"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:text="Duration"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="26sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listen_song"
            android:background="#606060"
            android:textColor="#fff"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginTop="20dp"
            android:id="@+id/songListenButton"/>
    </LinearLayout>


</LinearLayout>